--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "HNG Backend internship task 0",
   "main": "index.js",
   "scripts": {
+    "start": "dotenvx run -f .env.local -- node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "egbebitimi121@gmail.com",
